--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,12 @@ python:
 
 before_install:
   - sudo apt-get update
-  - sudo apt-get install libatlas-base-dev gfortran
+  - sudo apt-get install libatlas-base-dev gfortran libfftw3-3 libfftw3-dev
 
 install:
   - pip install -r requirements.txt
+  - easy_install "https://master-dl.sourceforge.net/project/psychpy/PsychoPy/PsychoPy-1.81.00-py2.7.egg"
+  - svn checkout http://pylibnidaqmx.googlecode.com/svn/trunk/ pylibnidaqmx && pip install ./pylibnidaqmx && rm -rf ./pylibnidaqmx
   - pip install .
 
 script: py.test
