--- a/.travis.yml
+++ b/.travis.yml
@@ -8,13 +8,14 @@ python:
 
 before_install:
   - sudo apt-get update
-  - sudo apt-get install libatlas-base-dev gfortran
+  - sudo apt-get install libatlas-base-dev gfortran libfftw3-3 libfftw3-dev
 
 install:
   - pip install numpy
   - pip install matplotlib
   - pip install scipy
   - pip install pandas
+  - pip install pyfftw
   - pip install .
 
 script: py.test
