--- a/.travis.yml
+++ b/.travis.yml
@@ -11,10 +11,7 @@ before_install:
   - sudo apt-get install libatlas-base-dev gfortran
 
 install:
-  - pip install numpy
-  - pip install matplotlib
-  - pip install scipy
-  - pip install pandas
+  - pip -r requirements.txt
   - pip install .
 
 script: py.test
