--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_install:
   - sudo apt-get install libatlas-base-dev gfortran
 
 install:
-  - pip -r requirements.txt
+  - pip install -r requirements.txt
   - pip install .
 
 script: py.test
