BF: Remove quotation marks

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-'numpy >= 1.7.2'
-'scipy'
-'matplotlib'
-'pandas >= 0.14.1'
-'sphinxcontrib-napoleon'
+numpy >= 1.7.2
+scipy
+matplotlib
+pandas >= 0.14.1
+sphinxcontrib-napoleon
