--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,7 @@ before_install:
   - sudo apt-get install libatlas-base-dev gfortran libfftw3-3 libfftw3-dev
 
 install:
-  - pip -r requirements.txt
-  - pip install https://github.com/psychopy/psychopy/archive/1.80.06.zip
-  - pip install svn+http://pylibnidaqmx.googlecode.com/svn/trunk
+  - pip install -r requirements.txt
   - pip install .
 
 script: py.test
