--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,5 @@ matplotlib
 pandas >= 0.14.1
 pyfftw
 sphinxcontrib-napoleon
+git+https://github.com/psychopy/psychopy.git@1.81.03#egg=psychopy
+svn+http://pylibnidaqmx.googlecode.com/svn/trunk
