--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
-git+https://github.com/psychopy/psychopy.git@1.81.03#egg=psychopy
-svn+http://pylibnidaqmx.googlecode.com/svn/trunk
+git+https://github.com/pearu/pylibnidaqmx.git
+git+https://github.com/psychopy/psychopy.git@1.82.02rc1#egg=psychopy
 -e .
