DOC: Fix RTD documentation creation
Documentation can now be successfully built on readthedocs.org; also,
Travis-CI is still working.

We did this by introducing a new requirements-doc.txt file, which only
contains the requirements for building the docs, and mocking out
pyfftw. See also https://github.com/rtfd/readthedocs.org/issues/1614

Closes #36.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,10 @@
+numpy
+pandas
+pillow
+matplotlib
+scipy
+pyfftw
 git+https://github.com/pearu/pylibnidaqmx.git
 git+https://github.com/psychopy/psychopy.git@1.82.02rc1#egg=psychopy
+sphinxcontrib-napoleon
 -e .
